[gd_scene load_steps=12 format=3 uid="uid://bc0vcrg1h1vwn"]

[ext_resource type="PackedScene" uid="uid://dnjfjdvu1trpp" path="res://Scenes/EnemyBase/EnemyBase.tscn" id="1_0ijd2"]
[ext_resource type="Texture2D" uid="uid://bsmbgkormcoyw" path="res://assets/enemies/eagle/eagle-attack.png" id="2_mhhwh"]
[ext_resource type="Script" uid="uid://b161d4nrka3y7" path="res://Scenes/EnemyBase/Eagle/Eagle.gd" id="2_wqqp2"]
[ext_resource type="PackedScene" uid="uid://cx4ect85qx6my" path="res://Scenes/Shooter/Shooter.tscn" id="4_4n21o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ijd2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wqqp2"]
atlas = ExtResource("2_mhhwh")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n21o"]
atlas = ExtResource("2_mhhwh")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkv1"]
atlas = ExtResource("2_mhhwh")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqwsp"]
atlas = ExtResource("2_mhhwh")
region = Rect2(120, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhhwh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqqp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n21o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqwsp")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mhhwh"]
radius = 12.0

[node name="Eagle" instance=ExtResource("1_0ijd2")]
collision_mask = 0
script = ExtResource("2_wqqp2")
fly_speed = Vector2(35, 15)

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_0ijd2")

[node name="AnimatedSprite2D" parent="." index="1"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_mhhwh")
animation = &"fly"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-2, 2)
shape = SubResource("CircleShape2D_mhhwh")

[node name="TurnTimer" type="Timer" parent="." index="4"]
wait_time = 3.0

[node name="PlayerDetector" type="RayCast2D" parent="." index="5"]
target_position = Vector2(0, 300)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Shooter" parent="." index="6" instance=ExtResource("4_4n21o")]
speed = 200.0
bullet_key = 0
shoot_delay = 0.5

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
